--- a/app/views/investigations/pages/_disp_chosabi.html.erb
+++ b/app/views/investigations/pages/_disp_chosabi.html.erb
@@ -1,11 +1,27 @@
 <% if start_day == end_day %>
-  <%= start_day %>
+  <% if calendar == "seireki" %>
+    <%= start_day.strftime('%Y/%m/%d') %>
+  <% elsif calendar == "wareki" %>
+    <%= disp_wareki(start_day) %>
+  <% end %>
 <% elsif start_day == (end_day - 1) %>
-  <%= start_day %>, <%= end_day.strftime('%m/%d') %>
+  <% if calendar == "seireki" %>
+    <%= start_day.strftime('%Y/%m/%d') %>, <%= end_day.strftime('%m/%d') %>
+  <% elsif calendar == "wareki" %>
+    <%= disp_wareki(start_day) %>, <%= disp_wareki(end_day) %>    
+  <% end %>
 <% else %>
   <% if start_day.year == end_day.year %>
-    <%= start_day.strftime('%Y/%m/%d') %>～<%= end_day.strftime('%m/%d') %>
+    <% if calendar == "seireki" %>
+      <%= start_day.strftime('%Y/%m/%d') %>～<%= end_day.strftime('%m/%d') %>
+    <% elsif calendar == "wareki" %>
+      <%= disp_wareki(start_day) %>～<%= disp_wareki(end_day) %>
+    <% end %>
   <% else %>
-    <%= start_day.strftime('%Y/%m/%d') %>～<%= end_day.strftime('%Y/%m/%d') %>
+    <% if calendar == "seireki" %>
+      <%= start_day.strftime('%Y/%m/%d') %>～<%= end_day.strftime('%Y/%m/%d') %>
+    <% elsif calendar == "wareki" %>
+      <%= disp_wareki(start_day) %>～<%= disp_wareki(end_day) %>    
+    <% end %>
   <% end %>
 <% end %>
