--- a/app/views/investigations/pages/_tatemonochosaichiranhyo.html.erb
+++ b/app/views/investigations/pages/_tatemonochosaichiranhyo.html.erb
@@ -82,25 +82,25 @@
             <td>
               <% if survey_type_1 == "事前" %>
                 <%= render 'investigations/pages/disp_chosabi', 
-                start_day: house.pre_survey_day, end_day: house.end_pre_survey_day %>
+                start_day: house.pre_survey_day, end_day: house.end_pre_survey_day, calendar: "seireki" %>
               <% elsif survey_type_1 == "事中" %>
                 <%= render 'investigations/pages/disp_chosabi', 
-                start_day: house.ongoing_survey_day, end_day: house.end_ongoing_survey_day %>
+                start_day: house.ongoing_survey_day, end_day: house.end_ongoing_survey_day, calendar: "seireki" %>
               <% elsif survey_type_1 == "事後" %>
                 <%= render 'investigations/pages/disp_chosabi', 
-                start_day: house.after_survey_day, end_day: house.end_after_survey_day %>
+                start_day: house.after_survey_day, end_day: house.end_after_survey_day, calendar: "seireki" %>
               <% end %>
             </td>
             <td>
               <% if survey_type_2 == "事前" %>
                 <%= render 'investigations/pages/disp_chosabi', 
-                start_day: house.pre_survey_day, end_day: house.end_pre_survey_day %>
+                start_day: house.pre_survey_day, end_day: house.end_pre_survey_day, calendar: "seireki" %>
               <% elsif survey_type_2 == "事中" %>
                 <%= render 'investigations/pages/disp_chosabi', 
-                start_day: house.ongoing_survey_day, end_day: house.end_ongoing_survey_day %>
+                start_day: house.ongoing_survey_day, end_day: house.end_ongoing_survey_day, calendar: "seireki" %>
               <% elsif survey_type_2 == "事後" %>
                 <%= render 'investigations/pages/disp_chosabi', 
-                start_day: house.after_survey_day, end_day: house.end_after_survey_day%>
+                start_day: house.after_survey_day, end_day: house.end_after_survey_day, calendar: "seireki" %>
               <% end %>
             </td>
             <td>
